--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,9 @@ services:
       - .:/app
     env_file:
       - .env
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8000/api/v1/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
